force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/BMCServiceDesk__ChatInstance__c.object-meta.xml
<CustomObject>
    <description>This object stores entry for every chat instance between a client and a staff user.</description>
    <label>Chat Instance</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>