force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__Account__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Account__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.BMCServiceDesk__Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>