force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__AssignedDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AssignedDate__c</fullName>
    <inlineHelpText>This field captures the date and time at which the chat was assigned to a staff member.</inlineHelpText>
    <label>Assigned Date</label>
    <type>DateTime</type>
</CustomField>