force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__ChatDetailCount__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ChatDetailCount__c</fullName>
    <label>Chat Detail Count</label>
    <summaryForeignKey>BMCServiceDesk__ChatDetail__c.BMCServiceDesk__FKChatInstance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>