force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__ChatDuration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ChatDuration__c</fullName>
    <formula>(BMCServiceDesk__ClosedDate__c - BMCServiceDesk__AssignedDate__c)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field captures the duration of the chat.</inlineHelpText>
    <label>Chat Duration (Minutes)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>