force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClosedDate__c</fullName>
    <inlineHelpText>This field captures the date and time at which the chat ended.</inlineHelpText>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>