force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__FKCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the value of the category selected for the chat instance.</description>
    <label>Category</label>
    <referenceTo>BMCServiceDesk__Category__c</referenceTo>
    <relationshipName>PreChatCategory</relationshipName>
    <type>Lookup</type>
</CustomField>