force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__FKClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ID of client instantiating chat.</description>
    <label>Client</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Instances1</relationshipName>
    <type>Lookup</type>
</CustomField>