force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>Incident of chat instance</relationshipLabel>
    <relationshipName>Incident_of_Chat_Instance</relationshipName>
    <type>Lookup</type>
</CustomField>