force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__FKStaff__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This stores the ID of staff chatting with the client.</description>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Chat_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>