force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/fields/BMCServiceDesk__OpenedDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OpenedDate__c</fullName>
    <inlineHelpText>This field captures the date and time at which the chat was initiated.</inlineHelpText>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>