force-app/main/default/objects/BMCServiceDesk__ChatInstance__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__FKClient__c</columns>
    <columns>BMCServiceDesk__FKStaff__c</columns>
    <columns>BMCServiceDesk__ChatDetailCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>